oc-infra/deploymentconfig.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: egeria-ui
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - egeria-ui
        from:
          kind: ImageStreamTag
          namespace: dev-kaiju
          name: 'egeria-ui:latest'
  replicas: 1
  revisionHistoryLimit: 10
  test: false
  selector:
    app: egeria-ui
  template:
    metadata:
      labels:
        app: egeria-ui
    spec:
      containers:
        - name: egeria-ui
          image: >-
            image-registry.openshift-image-registry.svc:5000/dev-kaiju/egeria-ui:latest
          ports:
            - containerPort: 3000
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
