oc-infra/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: egeria-ui
spec:
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: egeria-ui
  type: ClusterIP
