oc-infra/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: dave-egeria-ui
spec:
  to:
    kind: Service
    name: egeria-ui
    weight: 100
  port:
    targetPort: 3000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
